# JNIDirect

./: CMakeLists.txt  JNIDirect.c  JNIDirect.h  LICENSE  README.md  pom.xml
java/test/: JNIDirectTest.java
jni/: CMakeLists.txt  JNIDirect.c  JNIDirect.h  test.c
src/test/java/test/: JNIDirectTest.java
